--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
       padding:0;
     }
     canvas {
+      width: 1280px;
+      height: 720px;
+      display: block;
+      margin: 0 auto;
       image-rendering: crisp-edges;
       image-rendering: -moz-crisp-edges;
       image-rendering: -webkit-optimize-contrast;
@@ -19,6 +23,7 @@
   </style>
 </head>
 <body>
+  <canvas id="main"></canvas>
 </body>
 <script src="bundle.js"></script>
 </html>
