Initial ranged magic spells commit.

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <canvas id="main"></canvas>
+  <canvas id="main" oncontextmenu="return false;"></canvas>
 </body>
 <script src="bundle.js"></script>
 </html>
